--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ button{
     cursor: pointer;
     padding: 20px;
     border-radius: 5px;
-    transition: color 0.3s ease;
+    transition: background-color 0.3s ease;
 }
 
 .btn:hover{
